# ctfd_auto_setup

./: .pre-commit-config.yaml  README.md  dev.requirements.txt  env.sample  pyproject.toml
ctfd_setup/: __init__.py  __main__.py  configuration.py  helpers.py  main.py  pages.py
